--- a/challenge-locadora/index.html
+++ b/challenge-locadora/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge Locadora</title>
+    <title>G>F.L - Locação</title>
   </head>
   <body>
     <div id="app"></div>
